--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meta OS</title>
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        background: transparent !important;
+        height: 100vh;
+        width: 100vw;
+        /* display: none; */
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
