--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         background: transparent !important;
         height: 100vh;
         width: 100vw;
-        /* display: none; */
+        display: none;
       }
     </style>
   </head>
